deployments/dev/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moodlewesteurope-dev-ingress
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: moodle2.maeci.almdev.it
    http:
      paths:
      - path: /
        backend:
          serviceName: moodlewesteurope-dev-1
          servicePort: 80
  tls:
  - hosts:
      - moodle2.maeci.almdev.it
    secretName: moodle2-tls
